<resources>
    <string name="app_name">Planet App</string>
    <string name="start">START</string>
    <string name="start_dev_star_wars_explor">StartDev  \nStar Wars \nEXPLOR</string>
    <string name="planet_list">Planet List</string>
    <string name="population">Population:</string>
    <string name="diameter">Diameter:</string>
    <string name="rotation_period">Rotation Period:</string>
    <string name="orbital_period">Orbital Period:</string>
    <string name="climate">Climate:</string>
    <string name="gravity">Gravity:</string>
    <string name="terrain">Terrain:</string>
    <string name="surface_water">Surface water:</string>
</resources>
